# discord-native-win

./: .env  Cargo.toml
src/: demo.rs  error.rs  logging.rs  main.rs
src/discord/: mod.rs
src/discord/api/: mod.rs
src/discord/api/gateway/: mod.rs
src/discord/gateway/: compression.rs  dispatcher.rs  heartbeat.rs  mod.rs
src/discord/gateway/packets/: macros.rs  mod.rs
src/discord/gateway/websocket/: client.rs  codec.rs  connect.rs  error.rs  frame.rs  message.rs  mod.rs
src/discord/models/: auth.rs  gateway.rs  mod.rs  snowflake.rs  status.rs
