[package]
name = "discord-native-win"
version = "0.1.0"
authors = ["Connie Hilarides <conni_h@outlook.com>"]

[dependencies]
direct2d = "0.1.2"
direct3d11 = "0.1.4"
dxgi = "0.1.7"
directwrite = "0.1.2"
tokio = "0.1.6"
futures-await = "0.1.1"
serde = "1.0.44"
serde_derive = "1.0.44"
serde_json = "1.0.17"
erased-serde = "0.3.3"
itoa = "0.4.1"
chrono = "0.4.2"
flate2 = "1.0.1"
http = "0.1.5"
lazy_static = "1.0.0"
tokio-tls = "0.1.4"
tokio-io = "0.1.6"
bytes = "0.4.7"
rand = "0.4.2"
byteorder = "1.2.2"
native-tls = "0.1.5"
base64 = "0.9.1"
httparse = "1.2.4"
sha1 = "0.6.0"
log = "0.4.1"
dotenv = "0.10.0"
env_logger = "0.5.10"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls"

[dependencies.xi-win-shell]
git = "https://github.com/google/xi-win"

